k8s/crypto-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-svc
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-svc
  template:
    metadata:
      labels:
        app: crypto-svc
        role: backend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: crypto-svc
          image: ghcr.io/oleksiijko/crypto-svc:1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: tls
              mountPath: /certs
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: tls
          secret:
            secretName: tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: crypto-svc
  namespace: microservices
spec:
  selector:
    app: crypto-svc
  ports:
    - port: 80
      targetPort: 3000
