k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices
spec:
  rules:
    - http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-svc
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: content-svc
                port:
                  number: 80
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-svc
                port:
                  number: 80
